@@ -42,11 +42,13 @@ queue_print_uris(Response &r, Partition &partition, const Queue &queue,
 
 void
 queue_print_changes_info(Response &r, Partition &partition, const Queue &queue,
-			 uint32_t version);
+			 uint32_t version,
+			 unsigned start, unsigned end);
 
 void
 queue_print_changes_position(Response &r, const Queue &queue,
-			     uint32_t version);
+			     uint32_t version,
+			     unsigned start, unsigned end);
 
 void
 queue_find(Response &response, Partition &partition, const Queue &queue,
